---------------------------------------------------------------------------------------------------
Version: 1.3.18
Date: 2023-01-?
  Balancing:
    - Counter-strikes makes smaller creep areas
    - Counter-strikes are less often, but can happen for killing worms and "remote kill" distance is reduced.
  Info:
    - Removed redunant utility mod dependency
---------------------------------------------------------------------------------------------------
Version: 1.3.17
Date: 2023-01-07
  Major Features:
    - Extended creep generation interface for Rampant New Enemies to make worms, nests and hives generate creep differently. Newer Rampant is required.
    - Smarter creep generation for no New Enemies games. With or w/o Rampant. Makes worms and nests generate creep differently.
  Balancing:
    - Creep generation changed. Now should be balanced for any enemy bases difficulty. Worms give less biomass. Hives provide biomass abundance even with evolution growth.
    - Creep miners pollution decreased approx by 35% (via both - reduced startup setting value and diminished miners emissions).
  Bugfixes:
    - Fixed incorrect tiles positions for creep generation mechanics in some cases.
    - Creep Miner emissions startup setting had incorrect name/description since miner logics change in version 1.3.10.
---------------------------------------------------------------------------------------------------
Version: 1.3.16
Date: 2022-11-29
  Major Features:
    - Alt-selecting by creepmeter allows player to prioritize areas of creep to clear (Alt-selecting is holding Shift and left mouse button while moving cursor). Multiplayer support. Each player can have only one priority zone (new replaces an old one, no creep selection removes old one).
  Balancing:
    - Rampant Arsenal healing and speed capsules require bio residue.
  Bugfixes:
    - Fixed incorrect tiles positions check vs structures and areas bounding boxes for creep excavation and corrosion work.