@@ -33,12 +33,12 @@ data:extend({
     name = "acid_burns",
     category = "game-effect",
     filename = "__Warmonger__/sounds/scripted/acid_burns.ogg",
-    volume = 0.75,
-    audible_distance_modifier = 0.5,
+    volume = 0.65,
+    audible_distance_modifier = 1.0,
     aggregation = {
       max_count = 1,
       remove = false,
-      count_already_playing = false,
+      count_already_playing = true,
     },
   },
 
