@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.18
 Date: 2023-01-?
+  Major Features:
+    - New mechanism for corrosion event. Now all player's buildings will corrode individually with smaller damage, but more often. And less game resource consumed.
   Balancing:
     - Counter-strikes makes smaller creep areas
     - Counter-strikes are less often, but can happen for killing worms and "remote kill" distance is reduced.
